examples/valid/05_top_level_contextual_offer.lane
module Examples.Valid05
import Ops.*
pub fn custom_add(a : Int, b : Int) -> Int {
  a
}

pub offer custom_add_ops : Add[Int] = Add::{ add: custom_add }

pub let chosen : Int = op_add(1, 2, op=custom_add_ops)

pub fn use_offered_add() -> Int {
  chosen
}
