examples/invalid/19_ambiguous_contextual_offer.lane
// invalid: contextual resolution rejects multiple visible offers for the same target type
module Examples.Invalid19

import Ops.*

pub fn custom_add(a : Int, b : Int) -> Int {
  a
}

pub offer custom_add_ops : Add[Int] = Add::{
  add: custom_add
}

pub let chosen : Int = 1 + 2
